fix ci